# CLANE

./: .gitignore  LICENSE  Portfolio.md  README.md  abc  asset-manifest.json  data.py  dataset.py  embed.py  embed_cosine.py  embed_uniform.py  environment.yaml  environment.yml  evaluate.py  experiment.py  graph.py  helper.py  index.html  main.py  models.py  output  package.json  pca.py  preprocess.py  pyproject.toml  requirements  requirements.txt  settings.py  setup.cfg  setup.py
.github/workflows/: build_on_release.yaml  lint.yml  test.yaml
clane/: __init__.py  __main__.py  embed.py  embed_multi.py  embedder.py  experiments.py  graph.py  loader.py  loss.py  manager.py  markovchain.py  misc.py  models.py  settings.py  similarity.py  trainer.py
clane/data/: imagenet_clawler.py  loader.py
clane/experiments/: classification.py  clustering.py  experiment.py  reconstruction.py
clane/graphs/: __init__.py  cora.py  dataset.py  graph.py  karate.py  transforms.py  undirected.py  utils.py
clane/legacy/: embed.py  embed_multi.py  graph.py  models.py
clane/similarities/: __init__.py  nonparametric.py  parametric.py  utils.py
clane/utils/: context_manager.py
configs/: test.yaml
demo/: package.json
demo/public/: index.html
demo/src/: App.js  index.js  theme.js
src/: index.js
static/js/: 2.26a65e8d.chunk.js  2.26a65e8d.chunk.js.map  2.68068041.chunk.js  2.68068041.chunk.js.LICENSE.txt  2.68068041.chunk.js.map  2.95727a87.chunk.js  (+73 more)
tests/: config.yaml  config2.yaml  test_cli.py  test_data_loading.py  test_embedder.py  test_graph.py  test_similarity.py
(+18 files in other folders)
