[metadata]
name = clane
version=1.0.0
author= Youngbeom Choi
author_email = helloybz@gmail.com
description = A package of the implementation of CLANE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/helloybz/CLANE
project_urls =
    Bug Tracker = https://github.com/helloybz/CLANE/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = clane
python_requires = >=3.8
install_requires = 
    pyyaml==6.0
    numpy==1.22.0
    torch==1.9.1


[options.entry_points]
console_scripts= 
    clane = clane.__main__:main